--- a/app/src/main/res/layout/navigation_bottom.xml
+++ b/app/src/main/res/layout/navigation_bottom.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.bottomnavigation.BottomNavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottom_navigation"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="@color/white"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="28dp"
+    app:cardElevation="12dp">
 
-    app:menu="@menu/menu_bottom_nav"
-    app:itemIconTint="@drawable/nav_icon_color_selector"
-    app:itemRippleColor="@android:color/transparent"
-    app:itemActiveIndicatorStyle="@null"
-    app:labelVisibilityMode="unlabeled" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:minHeight="48dp"
+
+        app:itemActiveIndicatorStyle="@null"
+        app:itemIconSize="20dp"
+        app:itemIconTint="@drawable/nav_icon_color_selector"
+        app:itemRippleColor="@android:color/transparent"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/menu_bottom_nav" />
+</androidx.cardview.widget.CardView>
