--- a/app/src/main/res/layout/toolbar_basic.xml
+++ b/app/src/main/res/layout/toolbar_basic.xml
@@ -1,5 +1,6 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="56dp"
@@ -16,18 +17,20 @@
         android:clipToPadding="false"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/back_button_card"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:outlineAmbientShadowColor="@color/transparent"
             android:outlineSpotShadowColor="@color/transparent"
             app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="20dp"
-            app:cardElevation="6dp">
+            app:cardElevation="6dp"
+            tools:targetApi="28">
 
             <!-- 뒤로가기 버튼 -->
             <ImageButton
@@ -36,10 +39,9 @@
                 android:layout_height="40dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="뒤로가기"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@drawable/ic_arrow_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/text_primary" />
         </androidx.cardview.widget.CardView>
 
@@ -55,11 +57,11 @@
             android:text=""
             android:textColor="@color/text_primary"
             android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
 
     </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
