--- a/app/src/main/res/layout/cook_tip_01.xml
+++ b/app/src/main/res/layout/cook_tip_01.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:paddingHorizontal="16dp"
     android:paddingBottom="8dp">
 
-    <!-- 메인 이미지 및 텍스트 컨테이너 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/recipe_image_container"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_gravity="center">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/recipe_image_card_view"
@@ -28,7 +26,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <!-- CardView 내부에 ConstraintLayout을 두어 이미지, 그라데이션, 텍스트를 배치 -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -39,8 +36,6 @@
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
                     android:contentDescription="요리 이미지"
-                    android:clickable="true"
-                    android:focusable="true"
                     android:foreground="?attr/selectableItemBackground"
                     tools:srcCompat="@tools:sample/backgrounds/scenic[1]"
                     android:background="@drawable/bg_main_rounded_gray"
@@ -49,7 +44,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
-                <!-- 그라데이션 오버레이 View -->
                 <View
                     android:id="@+id/gradient_overlay"
                     android:layout_width="0dp"
@@ -59,7 +53,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
 
-                <!-- 텍스트 뷰들은 그라데이션 위에 위치 (XML에서 나중에 선언) -->
                 <TextView
                     android:id="@+id/sub_content_text"
                     android:layout_width="wrap_content"
@@ -74,20 +67,23 @@
                     android:shadowColor="#80000000"
                     android:shadowDx="1"
                     android:shadowDy="1"
-                    android:shadowRadius="2"/>
+                    android:shadowRadius="2"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/main_content_text"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="내용"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:layout_marginStart="16dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/sub_content_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:shadowColor="#80000000"
                     android:shadowDx="1"
                     android:shadowDy="1"
@@ -97,4 +93,4 @@
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+</FrameLayout>
