타이머 플로팅 구현, 요리 퀴즈 추가, 제철 식재료 추가, 재료 검색도 가능하게 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,4 +60,8 @@
     <color name="warning">#FF9800</color>
     <color name="success">#4CAF50</color>
 
+    <!-- OX -->
+    <color name="primary_blue">#4FC3F7</color>
+    <color name="primary_red">#EF9A9A</color>
+
 </resources>
