--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -274,7 +274,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
-                                    android:text="기타"
+                                    android:text="더보기"
                                     android:textAppearance="@style/category"
                                     android:textColor="#333333"/>
                             </LinearLayout>
